--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1847,6 +1847,40 @@ body {
     padding-bottom: 2rem;
   }
 }
+.cid-rHdV31i2Yi {
+  padding-top: 15px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rHdV31i2Yi h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rHdV31i2Yi p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rHdV31i2Yi .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rHdV31i2Yi .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rHdV31i2Yi .mbr-text {
+  color: #767676;
+}
+.cid-rHdV31i2Yi .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rHdV31i2Yi .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
 .cid-rshjbZhhP3 {
   padding-top: 90px;
   padding-bottom: 0px;
@@ -1877,6 +1911,40 @@ body {
 }
 @media (max-width: 767px) {
   .cid-rshjbZhhP3 .card:not(.last-child) {
+    padding-bottom: 2rem;
+  }
+}
+.cid-rHe5KFWJ68 {
+  padding-top: 0px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rHe5KFWJ68 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rHe5KFWJ68 p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+  padding-top: 2rem;
+}
+.cid-rHe5KFWJ68 .mbr-section-btn {
+  padding-top: 2.5rem;
+}
+.cid-rHe5KFWJ68 .mbr-section-btn a {
+  margin: 0;
+}
+.cid-rHe5KFWJ68 .mbr-text {
+  color: #767676;
+}
+.cid-rHe5KFWJ68 .card-wrapper {
+  height: 100%;
+}
+@media (max-width: 767px) {
+  .cid-rHe5KFWJ68 .card:not(.last-child) {
     padding-bottom: 2rem;
   }
 }
