--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3177,8 +3177,8 @@ section.lazy-placeholder:after {
   color: #006600;
 }
 .cid-rt1AC7zNX6 {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rt1AC7zNX6 .mbr-section-btn > * {
@@ -3263,19 +3263,7 @@ section.lazy-placeholder:after {
 .cid-rsWm5NJw3g {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rsWm60tvex {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-image: url("../../../assets/images/web-post-eskolar-federatuak5-copia-2000x805.png");
-}
-.cid-rsWm60tvex .mbr-iconfont-social {
-  font-size: 32px;
-  color: #787324;
-}
-.cid-rsWm60tvex .social-list a:focus {
-  text-decoration: none;
+  background-color: #e4d295;
 }
 .cid-shfhKfrlWk {
   padding-top: 45px;
